# libxsql

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  basic_table.cpp  cached_table.cpp  server_client.cpp  writable_table.cpp
include/xsql/: database.hpp  functions.hpp  types.hpp  vtable.hpp  vtable_builder.hpp  vtable_writable.hpp  xsql.hpp
include/xsql/socket/: client.hpp  protocol.hpp  server.hpp
include/xsql/thinclient/: server.hpp
tests/: CMakeLists.txt  test_database.cpp  test_protocol.cpp  test_thinclient.cpp  test_vtable.cpp
